--- a/config/services.yaml
+++ b/config/services.yaml
@@ -20,6 +20,17 @@ services:
             - '../src/Entity/'
             - '../src/Kernel.php'
             - '../src/Tests/'
-
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    App\Request\ParamConverter\ItemConverter:
+        tags: 
+            - { name: 'request.param_converter', priority: 1 }
+    App\Request\ParamConverter\PutConverter:
+        tags: 
+            - { name: 'request.param_converter', priority: 0 }
+    App\Request\ParamConverter\PostConverter:
+        tags: 
+            - { name: 'request.param_converter',  priority: 255 }
+
+    Symfony\Bridge\Doctrine\Security\User\UserLoaderInterface: '@App\Repository\UserRepository'
+  
